# c0mpiled

./: .gitignore  main.py  pyproject.toml
backend/: ai_utils.py  main.py  ml_utils.py  routes.py
prompts/: system_prompt.txt
tasks/: lessons.md  todo.md
