[project]
name = "c0mpiled"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "llama-index>=0.14.15",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-readers-file>=0.5.6",
    "llama-index-retrievers-bm25>=0.6.5",
    "numpy>=2.4.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
    "uvicorn>=0.41.0",
]
